[package]
name = "kitdraw"
version = "0.1.0"
edition = "2024"
description = "Draw in terminal"
license = "MIT"
repository = "https://github.com/wensheng/kitdraw"
readme = "README.md"
keywords = ["cli", "utility", "image", "png"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
flate2 = "1.1"
image = "0.25"
